[tool.poetry]
name = "zodchy-security"
version = "0.1.2"
description = "Collection of tools to secure application with zodchy architecture"
authors = ["Smairon <man@smairon.ru>"]
readme = "README.md"
repository = "https://github.com/smairon/zodchy-security"
packages = [{ include = "zodchy_security" }]

[tool.poetry.dependencies]
python = "^3.11"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"