[tool.poetry]
name = "zodchy-security"
version = "0.2.0"
description = "Collection of tools to secure application with zodchy architecture"
authors = ["Smairon <man@smairon.ru>"]
readme = "README.md"
repository = "https://github.com/smairon/zodchy-security"
packages = [{ include = "zodchy_security" }]

[tool.poetry.dependencies]
python = "^3.11"
pyjwt = ">=2.*"
zodchy = "^0.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"